[gd_scene load_steps=6 format=3 uid="uid://c7sxxpmaukljm"]

[ext_resource type="PackedScene" uid="uid://bct6pd7l1iui0" path="res://scenes/ui/ui.tscn" id="1_qokvn"]
[ext_resource type="Texture2D" uid="uid://dfntc06od6x8o" path="res://scenes/entrada_principal/sprites/entrada principal.png" id="2_jpxrv"]
[ext_resource type="PackedScene" uid="uid://cyl30kecp6emh" path="res://scenes/player/player.tscn" id="3_yg2wm"]
[ext_resource type="Script" uid="uid://ka0uhamnqi7i" path="res://porta_wc.gd" id="4_bjioa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i3nrj"]
size = Vector2(222, 338)

[node name="EntradaPrincipal" type="Node2D"]

[node name="UI" parent="." instance=ExtResource("1_qokvn")]

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 292.0
offset_top = 95.0
offset_right = 1628.0
offset_bottom = 781.0
texture = ExtResource("2_jpxrv")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="player" parent="." instance=ExtResource("3_yg2wm")]
position = Vector2(974, 559)

[node name="porta_wc" type="Area2D" parent="."]
script = ExtResource("4_bjioa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="porta_wc"]
position = Vector2(1409, 437)
shape = SubResource("RectangleShape2D_i3nrj")

[connection signal="body_entered" from="porta_wc" to="porta_wc" method="_on_body_entered"]
[connection signal="body_exited" from="porta_wc" to="porta_wc" method="_on_body_exited"]
[connection signal="input_event" from="porta_wc" to="porta_wc" method="_on_input_event"]
